httpd/httpd-deploy-2.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: httpd-deploy-2
  labels:
    environment: dev
    app: http-server
spec:
  replicas: 2
  selector:
    matchLabels:
      app: http-server
  template:
    metadata:
      labels:
        app: http-server
    spec:
      containers:
      - name: http-server
        image: httpd:alpine
        ports:
        - containerPort: 80
