httpd/labels-2.yml
apiVersion: v1
kind: Pod
metadata:
  name: label-demo-1
  labels:
    environment: development
    app: nginx
spec:
  containers:
  - name: nginx
    image: nginx:1.14.2
    ports:
    - containerPort: 80
