httpd/httpd-service-2.yaml
apiVersion: v1
kind: Service
metadata: 
  name: httpd-service-2
spec: 
  selector: 
    app: http-server
  ports: 
    - protocol: TCP
      port: 8082
      targetPort: 80
