httpd/httpd-service.yaml
apiVersion: v1
kind: Service
metadata: 
  name: httpd-service
spec: 
  selector: 
    app: http-server
  ports: 
    - protocol: TCP
      port: 8081
      targetPort: 80
